# app/Http/Resources/AssetResource.php
@@ -7,6 +7,13 @@ use Illuminate\Http\Resources\Json\JsonResource;
 
 class AssetResource extends JsonResource
 {
+
+    /**
+     * Indicates if the resource's collection keys should be preserved.
+     *
+     * @var bool
+     */
+    // public $preserveKeys = true;
     /**
      * Transform the resource into an array.
      *
@@ -21,6 +28,7 @@ class AssetResource extends JsonResource
             'operating_system' => $this->operating_system,
             'created_at' => $this->created_at->toDateTimeString(),
             'updated_at' => $this->updated_at->toDateTimeString(),
+            'vulnerabilities' => new VulnerabilityPagingResource($this->whenLoaded('vulnerabilities'))
         ];
     }
 }
