# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\AssessmentController;
 use App\Http\Controllers\AssetController;
 use App\Http\Controllers\CompanyController;
+use App\Http\Controllers\ImportController;
 use App\Http\Controllers\RiskResponseController;
 use App\Http\Controllers\SystemGroupController;
 use Illuminate\Http\Request;
@@ -15,11 +16,11 @@ use App\Http\Controllers\VulnerabilityController;
 Route::post('/user/login', [UserController::class, 'login'])->withoutMiddleware(['auth:sanctum']);
 
 Route::group(['middleware' => 'auth:sanctum'], function () {
-    
+
     // User Routes
     Route::get('/user/current', [UserController::class, 'current']);
     Route::post('/user/logout', [UserController::class, 'logout']);
-    
+
     // Tenant Routes
     Route::apiResource('tenants', TenantController::class);
     // Company Routes
@@ -30,9 +31,10 @@ Route::group(['middleware' => 'auth:sanctum'], function () {
     Route::apiResource('assessments', AssessmentController::class);
     // Vulnerability Routes
     Route::apiResource('vulnerabilities', VulnerabilityController::class);
+    Route::get('vulnerabilities/system-group/find/{id}', [VulnerabilityController::class, 'find']);
     // System Group Routes
     Route::apiResource('system-groups', SystemGroupController::class);
 
-    
-    Route::post('/upload', [UploadController::class, 'upload']);
-    });
+
+    Route::post('/import', [ImportController::class, 'import']);
+});
