# storage/api-docs/api-docs.json
@@ -605,6 +605,48 @@
                 ]
             }
         },
+        "/api/import": {
+            "post": {
+                "tags": [
+                    "Import"
+                ],
+                "summary": "Import a CSV",
+                "operationId": "importCSV",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "allOf": [
+                                    {
+                                        "properties": {
+                                            "file": {
+                                                "description": "Item CsV",
+                                                "type": "string",
+                                                "format": "binary"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                ]
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/api/system-groups": {
             "get": {
                 "tags": [
@@ -1004,48 +1046,6 @@
                 ]
             }
         },
-        "/api/upload": {
-            "post": {
-                "tags": [
-                    "Upload"
-                ],
-                "summary": "Upload a CSV",
-                "operationId": "uploadCSV",
-                "requestBody": {
-                    "content": {
-                        "multipart/form-data": {
-                            "schema": {
-                                "allOf": [
-                                    {
-                                        "properties": {
-                                            "file": {
-                                                "description": "Item CsV",
-                                                "type": "string",
-                                                "format": "binary"
-                                            }
-                                        },
-                                        "type": "object"
-                                    }
-                                ]
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "successful operation",
-                        "content": {
-                            "application/json": {}
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "sanctum": []
-                    }
-                ]
-            }
-        },
         "/api/user/login": {
             "post": {
                 "tags": [
@@ -1325,6 +1325,44 @@
                     }
                 ]
             }
+        },
+        "/api/vulnerabilities/system-group/find/{id}": {
+            "get": {
+                "tags": [
+                    "Vulnerabilities"
+                ],
+                "summary": "Get Vulnerability information",
+                "description": "Returns Vulnerability data",
+                "operationId": "showVulnerabilityBySystemGroup",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "System group id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/VulnerabilityResource"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -1521,6 +1559,14 @@
                             },
                             "company": {
                                 "$ref": "#/components/schemas/Company"
+                            },
+                            "assets": {
+                                "title": "Assets",
+                                "description": "System group assets list",
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/components/schemas/Asset"
+                                }
                             }
                         },
                         "type": "object"
